--- a/style.css
+++ b/style.css
@@ -1,2 +1,2 @@
-body{ background-color: #ce6dc9; Color: rgb(59, 8, 67); }
-h1 { Color: rgb(222, 38, 111) ;}
+body{ background-color: #edb5ea; Color: rgb(66, 6, 75); }
+h1 { Color: rgb(65, 21, 39) ;}
