--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 body{ background-color: #eed2da; Color: rgb(66, 6, 75); }
 h1 { Color: rgb(152, 66, 102) ;}
-hr { colour: rgb(94, 7, 21) ;}
+hr { color: rgb(94, 7, 21) ;}
