--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 body{ background-color: #eed2da; Color: rgb(66, 6, 75); font-size: 12pt; font-family: Arial; margin-top: 10pt; margin-bottom: 10pt; margin-left: 10pt; margin-bottom: 10pt ;}
-h1 { Color: rgb(152, 66, 102) ; font-size:larger; font-weight: bolder; font-family: Arial;}
+h1 { Color: rgb(152, 66, 102) ; }
 hr { border-color: rgb(123, 40, 53) ;}
