--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{ background-color: #eed2da; Color: rgb(66, 6, 75); font-size: 12pt; font-family: Arial; margin-top: 10pt; margin-bottom: 10pt; margin-left: 10pt; margin-bottom: 10pt ;}
-h1 { Color: rgb(152, 66, 102) ; font-size: 40pt; -webkit-text-stroke-width:3px; -webkit-text-stroke-color: rgb(117, 50, 78); text-shadow: ;}
+h1 { Color: rgb(152, 66, 102) ; font-size: 40pt; -webkit-text-stroke-width:3px; -webkit-text-stroke-color: rgb(117, 50, 78); }
 hr { border-color: rgb(123, 40, 53) ;}
-h2 { color: rgb(152, 66, 102);}
+h2
+p{ color-scheme: rgb(94, 41, 63) ;}
