--- a/style.css
+++ b/style.css
@@ -7,5 +7,5 @@ p,ul,ol{ color: rgb(79, 33, 52) ; font-style: italic;}
 A:link {text-decoration: none}
 A:visited {text-decoration: none}
 A:active {text-decoration: none}
-A:hover {text-decoration: underline; color:rgb(123, 40, 53);}
+A:hover {text-decoration: underline overline; color:rgb(123, 40, 53);}
 </style>
