--- a/style.css
+++ b/style.css
@@ -2,10 +2,9 @@ body{ background-color: #eed2da; Color: rgb(66, 6, 75); font-size: 12pt; font-fa
 h1 { Color: rgb(152, 66, 102) ; font-size: 40pt; -webkit-text-stroke-width:3px; -webkit-text-stroke-color: rgb(117, 50, 78); }
 hr { border-color: rgb(123, 40, 53) ;}
 h2 { color: rgb(152, 66, 102);}
-p,ul,ol{ color: rgb(79, 33, 52) ; font-style: italic;}
-<style type="text/css">
-A:link {text-decoration: none}
-A:visited {text-decoration: none}
-A:active {text-decoration: none}
-A:hover {text-decoration: underline overline; color:rgb(79, 33, 52));}
-</style>
+p,ul,ol{ color: #4f2134 ; font-style: italic;}
+
+A:link {text-decoration: none;}
+A:visited {text-decoration:transparent;color: #4f2134;}
+A:active {text-decoration: none;}
+A:hover {text-decoration: underline overline; color:#4f2134;}
