--- a/style.css
+++ b/style.css
@@ -5,6 +5,6 @@ h2 { color: rgb(152, 66, 102);}
 p,ul,ol{ color: #4f2134 ; font-style: italic;}
 
 A:link {text-decoration: none;}
-A:visited {text-decoration:transparent;color: #da5a8fb7;}
+A:visited {text-decoration:transparent;color:rgb(152, 66, 102);}
 A:active {text-decoration: none;}
-A:hover {text-decoration: underline overline; color:#4f2134;}
+A:hover {text-decoration: underline overline; color:rgb(66, 6, 75);}
