--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@ body{ background-color: #eed2da; Color: rgb(66, 6, 75); font-size: 12pt; font-fa
 h1 { Color: rgb(152, 66, 102) ; font-size: 40pt; -webkit-text-stroke-width:3px; -webkit-text-stroke-color: rgb(66, 6, 75); }
 hr { border-color: rgb(123, 40, 53) ;}
 h2 { color: rgb(152, 66, 102);}
-p,ul,ol{ color: #4f2134 ; font-style: italic;}
+p,ul,ol{ color:rgb(123, 40, 53) ; font-style: italic;}
 
-A:link {text-decoration: none;}
+A:link {text-decoration: none;color:rgb(66, 6, 75);}
 A:visited {text-decoration:transparent;color:rgb(152, 66, 102);}
 A:active {text-decoration: none;}
-A:hover {text-decoration: underline overline; color:rgb(66, 6, 75);}
+A:hover {text-decoration: underline overline; color:rgb(104, 9, 119);}
