--- a/style.css
+++ b/style.css
@@ -9,4 +9,4 @@ A:visited {text-decoration:transparent;color:rgb(152, 66, 102);}
 A:active {text-decoration: none;}
 A:hover {text-decoration: underline overline; color:rgb(104, 9, 119);}
 
-.table{border-color: black; border-style: dotted;}
+tr, th, table{border-color: black 1px; border-style: dotted;}
