--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{ background-color: #eed2da; Color: rgb(66, 6, 75); font-size: 12pt; font-fa
 h1 { Color: rgb(152, 66, 102) ; font-size: 40pt; -webkit-text-stroke-width:3px; -webkit-text-stroke-color: rgb(66, 6, 75); }
 hr { border-color: rgb(123, 40, 53) ;}
 h2 { color: rgb(152, 66, 102);}
+h4 { color: rgb(66, 6, 75); font-size: 12pt; font-family: Arial;}
 p,ul,ol{ color:rgb(123, 40, 53) ; font-style: italic;}
 
 A:link {text-decoration: none;color:rgb(66, 6, 75);}
