--- a/style.css
+++ b/style.css
@@ -12,3 +12,25 @@ A:hover {text-decoration: underline overline; color:rgb(104, 9, 119);}
 
 tr, th, td{border-color: rgb(123,40, 53) 30px; border-style:double }
 table{width: 100%; height: 100% ;} 
+
+.navbr ul{
+    list-style-type: none;
+    background-color: rgb(152, 66, 102);
+    padding: 0px;
+    Margin: 0px; }
+
+.navbr a:hover {
+    color: rgb(66, 6, 75);
+    text-decoration: none;
+    padding: 15px;
+    display: block;
+    text-align: center;
+    background-color: rgb(66, 6, 75);}
+
+
+
+.navbar li{ 
+    float: left;}
+
+h1{ text-align: center;}
+
