--- a/style.css
+++ b/style.css
@@ -13,24 +13,71 @@ A:hover {text-decoration: underline overline; color:rgb(104, 9, 119);}
 tr, th, td{border-color: rgb(123,40, 53) 30px; border-style:double }
 table{width: 100%; height: 100% ;} 
 
-.navbr ul{
-    list-style-type: none;
-    background-color: rgb(152, 66, 102);
-    padding: 0px;
-    Margin: 0px; }
-
-.navbr a:hover {
-    color: rgb(66, 6, 75);
-    text-decoration: none;
-    padding: 15px;
-    display: block;
-    text-align: center;
-    background-color: rgb(66, 6, 75);}
-
-
-
-.navbar li{ 
-    float: left;}
-
 h1{ text-align: center;}
 
+.description {
+    display: table-cell;
+    border: 1px solid #000;
+    padding: 10px;
+}
+
+.dropdown-content { 
+    display: none; /* hide content in dropdown*/
+    background-color: #AC2581;
+    padding: 5px;
+    position: absolute;
+    top: auto;
+    left: auto;
+    text-align: left;
+    border-radius: 0.5rem;
+
+}
+
+.dropdown-content a {
+    color: #F9F0FE;
+    display: block;
+    font-size: 12px;
+    font-family: 'Gill Sans', sans-serif;
+    
+}
+
+.show{
+    display: block;
+}
+
+nav{
+    background-color: #AC2581;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    border-radius: 1rem;
+    height: 30pt;
+    align-items: center;
+    font-family: 'Serif';
+}
+
+.dropdown button{
+    border: none;
+    background: none;
+    color: #F9F0FE;
+    font-weight: bold;
+}
+
+.nav-item a{
+    color: #F9F0FE;
+    font: 12px;
+    text-decoration: none;
+    font-weight: bold;
+    margin: 0 50px;
+}
+
+.dropdown-content a:hover {
+    background-color: rgba(241, 241, 241, 0.8)
+    
+}
+
+.dropbtn {
+    font-size: 15px;
+    margin: 0 50px;
+    font-family: 'Serif';
+}
