--- a/style.css
+++ b/style.css
@@ -60,14 +60,12 @@ nav{
     border: none;
     background: none;
     color: #F9F0FE;
-    font-weight: bold;
 }
 
 .nav-item a{
     color: #F9F0FE;
     font: 12px;
     text-decoration: none;
-    font-weight: bold;
     margin: 0 50px;
 }
 
@@ -76,7 +74,7 @@ nav{
     
 }
 
-.dropbtn {
+.btn {
     font-size: 15px;
     margin: 0 50px;
     font-family: 'Serif';
